--- a/html/first_try.html
+++ b/html/first_try.html
@@ -21,6 +21,7 @@
         padding: 25px;
         margin: 25px;
     }
+    h2.hidden {visibility:hidden;}
 </style>
 </head>
 <body>
@@ -30,6 +31,7 @@
 <p id="test2">段落内容3</p>
 <p class = center2>段落内容4</p>
 <hr>
+<h2 class="hidden">隐藏的标题2</h2>
 <h2>标题2</h2>
 <a href="https://www.baidu.com">搜索</a>
 <hr>
